--- a/config/locales/en-US.yml
+++ b/config/locales/en-US.yml
@@ -22,3 +22,14 @@ en:
   remove_from_wishlist: "Remove from wishlist"
   wishlist_actions: "Actions"
   your_wishlist_is_empty: "Your wishlist is empty"
+  update_quantity: "Update quantity"
+  item_added_to_wishlist: "Item added to wishlist"
+  email_to_friend: "Email to a friend"
+  wishlist_email_sent: 'Your wishlist was successfully sent to your friend.'
+  send_wishlist: Send
+  email_address_missing: 'Email is required.'
+  message: Message
+  wishlist_sender_name: 'Your name'
+  wishlist_recipients_name: 'The name of your friend'
+  subject: 'Subject'
+
